--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,20 @@
     <div class="div navbar navbar-dark bg-primary shadow-sm">
         <div class="div navbar-brand align-item-center d-flex">
             
-            <i class="fa fa-shipping-fast">
-                <strong>FlipCart</strong>
+            <i style="font-size: 40px;" class="fa fa-shipping-fast">
+                <strong style="font-size: 30px;">FlipCart</strong>
             </i>
+
+
+            <div class="form-group">
+                <input type="text" placeholder="Search products" class="form-control">
+            </div>
+
+             <span class="fa fa-search search-icon"></span>
         </div>
+        <button class="button btn btn-primary">
+            <i style="font-size: 30px;" class="fa fa-cart-plus"></i>
+            <div style="font-size: 10px;" class="badge bg-danger">5</div>
+        </button>
     </div>
 </header>
